--- a/Recipes/lasagna.html
+++ b/Recipes/lasagna.html
@@ -6,5 +6,7 @@
   </head>
   <body>
     <h1>Enchilada Lasagna</h1>
+    <p>This enchilada lasagna is perfect for dinner or potlucks.</p>
+    <img src="images/lasagne.jpg" alt="Lasagne" />
   </body>
 </html>
