--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>HTML 5 Boilerplate</title>
+    <title>Odin Recipes</title>
   </head>
   <body>
     <h1>Odin Recipes</h1>
+    <a href="Recipes/lasagna.html">Lasagna</a>
   </body>
 </html>
