--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <a href="Recipes/lasagna.html">Lasagna</a>
+    <a href="Recipes/lasagna.html">Enchilada Lasagna</a>
+    <a href="Recipes/carbonara.html">"Carbonara" Spaghetti</a>
   </body>
 </html>
