--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <a href="Recipes/lasagna.html">Enchilada Lasagna</a>
-    <a href="Recipes/carbonara.html">"Carbonara" Spaghetti</a>
+    <ul>
+      <li><a href="Recipes/lasagna.html">Enchilada Lasagna</a></li>
+      <li><a href="Recipes/carbonara.html">"Carbonara" Spaghetti</a></li>
+    </ul>
   </body>
 </html>
