--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
+    <img src="images/cathat.jpg" alt="cat in a hat" />
     <ul>
       <li><a href="Recipes/lasagna.html">Enchilada Lasagna</a></li>
       <li><a href="Recipes/carbonara.html">"Carbonara" Spaghetti</a></li>
