updates on code

--- a/Recipes/lasagna.html
+++ b/Recipes/lasagna.html
@@ -53,5 +53,6 @@
         minutes. Cool for 15 minutes before serving. Garnish with green onion.
       </li>
     </ol>
+    <a href="/index.html">Back to the homepage</a>
   </body>
 </html>
