--- a/Recipes/carbonara.html
+++ b/Recipes/carbonara.html
@@ -44,6 +44,6 @@
     </ol>
     <p>Cook's note:</p>
     <p>Cook linguine pasta according to individual package instructions.</p>
-    <a href="/index.html">Back to the homepage</a>
+    <a href="/odin_recipes/index.html">Back to the homepage</a>
   </body>
 </html>
