--- a/Recipes/carbonara.html
+++ b/Recipes/carbonara.html
@@ -10,7 +10,7 @@
       Use milk and cream cheese in place of eggs to make an extra-creamy
       carbonara.
     </p>
-    <img src="images/carbonara.jpg" alt="carbonara spaghetti" />
+    <img src="/images/carbonara.jpg" alt="carbonara spaghetti" />
     <p>Ingredients</p>
     <ul>
       <li>1 (8 ounce) package linguine pasta</li>
