--- a/Recipes/lasagna.html
+++ b/Recipes/lasagna.html
@@ -7,7 +7,7 @@
   <body>
     <h1>Enchilada Lasagna</h1>
     <p>This enchilada lasagna is perfect for dinner or potlucks.</p>
-    <img src="/images/lasagne.jpg" alt="Enchilada Lasagne" />
+    <img src="./images/lasagne.jpg" alt="Enchilada Lasagne" />
     <p>Ingredients</p>
     <ul>
       <li>1 tablespoon vegetable oil</li>
