--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Odin Recipes</title>
   </head>
   <body>
+    * { border: 2px solid red; }
     <h1>Odin Recipes</h1>
     <img src="images/cathat.jpg" alt="cat in a hat" />
     <ul>
